use `App.exec` instead of `App.runWithProgress`
`runWithProgress` currently does not show any UI indicator that it is
running since we switched to the new Eclipse platform but `exec` does.
Both methods are semantically equal: the task is executed in a non-ui
thread, SWT/UI widget access is not permitted without dispatching to
the UI thread.

and then, we maybe can also use the exec methods instead of the other
run methods...